Added component alert

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,12 +40,15 @@
         "src/scss/base/_helpers.scss",
         "src/scss/layout/_header.scss",
         "src/scss/layout/_footer.scss",
-        "src/scss/components/_buttons.scss",
+        "src/scss/components/_button.scss",
+        "src/scss/components/_alert.scss",
         "src/scss/pages/_home.scss",
         "src/scss/themes/_default.scss",
-        "src/scss/abstracts/variables/_buttons.scss",
+        "src/scss/abstracts/variables/_button.scss",
         "src/scss/abstracts/variables/_typography.scss",
-        "src/scss/abstracts/mixins/_buttons.scss"
+        "src/scss/abstracts/variables/_alert.scss",
+        "src/scss/abstracts/mixins/_button.scss",
+        "src/scss/abstracts/mixins/_alert.scss"
       ]
     },
     {
@@ -62,7 +65,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
